<?xml version="1.0"?>
<package format="2">
  <name>taarn_mallard_onboard</name>
  <version>0.0.0</version>
  <description>The taarn_mallard_onboard package</description>

  <maintainer email="zhengyi.jiang@ice9robotics.co.uk">Zhengyi Jiang</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>launch_config</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>

  <export>
  </export>
</package>
